--- a/Parcial Final Procesamiento Numerico AJ T00056470.ipynb
+++ b/Parcial Final Procesamiento Numerico AJ T00056470.ipynb
@@ -34,26 +34,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle - \\frac{32}{9}$"
-      ],
-      "text/plain": [
-       "-32/9"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-32/9\n"
+     ]
     }
    ],
    "source": [
     "expr1 = y*x**3 -2*(y**2)*x**2 + x*y**3\n",
-    "sym.integrate(expr1, (y, 0, 2), (x, -1, 1) ) #P1 A"
+    "print(sym.integrate(expr1, (y, 0, 2), (x, -1, 1) )) #P1 A"
    ]
   },
   {
@@ -91,21 +85,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle -4.125$"
-      ],
-      "text/plain": [
-       "-4.12500000000000"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-4.12500000000000\n"
+     ]
     }
    ],
    "source": [
@@ -116,7 +104,7 @@
     "\n",
     "g = sym.lambdify(x, integral_y)\n",
     "integral_x = (h2)*(((g(-1) + g(1))/2) + Sum(g(-1 + k*h2), (k, 1, 3)).doit())\n",
-    "integral_x # P1 B"
+    "print(integral_x) # P1 B"
    ]
   },
   {
